// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Title component Matches the snapshot 1`] = `
<div
  className="sc-AxhUy iIDmId"
  onClick={[Function]}
>
  <div
    className="sc-AxiKw IALJF"
  >
    <img
      alt="background"
    />
  </div>
  <h2
    className="sc-AxirZ jOuzpb"
  />
</div>
`;

exports[`Workcard component Matches the snapshot 1`] = `
<div
  className="sc-AxhUy iIDmId"
  onClick={[Function]}
>
  <div
    className="sc-AxiKw IALJF"
  >
    <img
      alt="background"
    />
  </div>
  <h2
    className="sc-AxirZ jOuzpb"
  >
    test
  </h2>
</div>
`;
